delate about-crazy-fm

--- a/partials/win.partial.html
+++ b/partials/win.partial.html
@@ -10,6 +10,6 @@
     <p>
         Events are taking place across the UK and include fun inflatable games, face painting, training sessions with professional coaches, fun activities for children of all ages regardless of their football playing skills. Everybody is welcome!
     </p>
-    <a href="/button">Find Out More</a>
+    <a href="#button">Find Out More</a>
     </div>
 </div>
