--- a/partials/schedule.partial.html
+++ b/partials/schedule.partial.html
@@ -1,8 +1,4 @@
-<head>
-    <h1 class="schedule__title">Schedule</h1>
-</head>
-
-<body>
+<section class="schedule">
     <table class="schedule__table">
         <tr class="schedule__row">
             <th class="schedule__heading">Days</th>
@@ -45,4 +41,4 @@
             <td class="schedule__data">Groove Motion Radio Show</td>
         </tr>
     </table>
-</body>
+</section>
