--- a/partials/latest-news.partial.html
+++ b/partials/latest-news.partial.html
@@ -5,17 +5,17 @@
     <div class="latest-news__cards">
         <ul class="latest-news__menu">
             <li class="latest-news__menu--item">
-                <img  src="img/girl-with-a-can.jpg" alt="Girl with a can">
+                <img  src="img/latest-news/girl-with-a-can.jpg" alt="Girl with a can">
                 <p>Music</p>
                 <a href="#" class="latest-news__menu--item latest-news__menu--link">Britney Spears Celebrates 20-Year Anniversary of '...Baby One More Time'</a>
             </li>
             <li class="latest-news__cards--item-card">
-                <img src="img/leaves.jpg" alt="Leaves">
+                <img src="img/latest-news/leaves.jpg" alt="Leaves">
                 <p>Music</p>
                 <a href="#" class="latest-news__menu--item latest-news__menu--link">Christina Aguilera Features a Very Unlikely Celebrity on a Song</a>
             </li>
             <li class="latest-news__cards--item-card">
-                <img src="img/men.jpg" alt="Men">
+                <img src="img/latest-news/men.jpg" alt="Men">
                 <p>Music</p>
                 <a href="#" class="latest-news__menu--item latest-news__menu--link">Supergroup The Good, The Bad & The Queen Announces First Album</a>
             </li>
@@ -23,7 +23,7 @@
 </div>
 <div class="latest-news__button">
     <a href="#" class="latest-news__link latest-news__link--more-news">More news</a>
-    <img src="img/yellow.jpg" alt="Yellow">
+    <img src="img/latest-news/yellow.jpg" alt="Yellow">
     <p>Giveaway</p>
 </div>
 </section>
