--- a/partials/turn-up.partial.html
+++ b/partials/turn-up.partial.html
@@ -1,1 +1,5 @@
-<latest-news class="partial html"></latest-news>
+<section>
+<h1>Turn Up Your MOOD</h1>
+<p>Download a free Crazy FM app & enjoy the experience!</p>
+<a href="#"> Download the App</a>
+</section>
