Fixed problem with img in section About Crazy FM

--- a/partials/about-us.partial.html
+++ b/partials/about-us.partial.html
@@ -1,5 +1,5 @@
 <section class="about-crazy-fm">
-    <img class="about-crazy-fm__logo" width="627" src="img/man-in-hoodie.jpg" alt="About Crazy FM Logo">
+    <img class="about-crazy-fm__logo" width="627" src="img/about-us/man-in-hoodie.jpg" alt="About Crazy FM Logo">
     <h2 class="about-crazy-fm__title">
         About Crazy FM
     </h2>
