redact my partials(win,careers)

--- a/partials/careers.partial.html
+++ b/partials/careers.partial.html
@@ -1,13 +1,17 @@
-<div class="career-block">
-    <div class="career-block-right-column">
-        <img src="img/careers/pattern-career.webp" alt="Pattern background" class="fond__pattern">
+<section class="career-block">
+    <div class="career-block__logo">
+        <img src="img/careers/pattern-career.webp" alt="Pattern background">
     </div>
-    <div class="career-block-left-column">
-    <p>CAREERS</p>
-    <h2>Want to Work With Us?</h2>
-    <p>
-        If you are interested in joining our team and make a prospective career with lots of work and life benefits, you're in the right place. We are looking for young and talented enthusiasts.
-    </p>
-    <a href="#">See Job Openings</a>
+    <div class="career-block__advert">
+        <p class="career-block__intro">
+            CAREERS
+        </p>
+        <h2 class="career-block__title">
+            Want to Work With Us?
+        </h2>
+        <p class="career-block__info">
+            If you are interested in joining our team and make a prospective career with lots of work and life benefits, you're in the right place. We are looking for young and talented enthusiasts.
+        </p>
+        <a class="career-block__button" href="#">See Job Openings</a>
     </div>
-</div>
+</section>
