--- a/partials/win.partial.html
+++ b/partials/win.partial.html
@@ -1,15 +1,17 @@
-<div class="win-block">
-    <div class="win-block-right-column">
-        <img src="img/win/pattern.webp" alt="Pattern background" class="pattern__image">
+<section class="win-block">
+    <div class="win-block__logo">
+        <img src="img/win/pattern.webp" alt="Pattern background">
     </div>
-    <div class="win-block-left-column">
-    <h2>Win $15,000 Worth of Equipment with McDonald's Community Football</h2>
-    <p>
-        McDonald's (proud sponsors of the Frank Skinner Show on Crazy FM) are celebrating 15 years of supporting Grassroots Football across the UK. This summer, McDonald’s is providing fun free family Community Football Days with more grassroots football clubs than ever before!
-    </p>
-    <p>
-        Events are taking place across the UK and include fun inflatable games, face painting, training sessions with professional coaches, fun activities for children of all ages regardless of their football playing skills. Everybody is welcome!
-    </p>
-    <a href="#">Find Out More</a>
+    <div class="win-block__advert">
+        <h2 class="win-block__title">
+            Win $15,000 Worth of Equipment with McDonald's Community Football
+        </h2>
+        <p class="win-block__info">
+            McDonald's (proud sponsors of the Frank Skinner Show on Crazy FM) are celebrating 15 years of supporting Grassroots Football across the UK. This summer, McDonald’s is providing fun free family Community Football Days with more grassroots football clubs than ever before!
+        </p>
+        <p class="win-block__info">
+            Events are taking place across the UK and include fun inflatable games, face painting, training sessions with professional coaches, fun activities for children of all ages regardless of their football playing skills. Everybody is welcome!
+        </p>
+    <a class="win-block__button" href="#">Find Out More</a>
     </div>
-</div>
+</section>
