--- a/partials/careers.partial.html
+++ b/partials/careers.partial.html
@@ -1,17 +1,17 @@
-<section class="career-block">
-    <div class="career-block__logo">
+<section class="career">
+    <div class="career__logo">
         <img src="img/careers/pattern-career.webp" alt="Pattern background">
     </div>
-    <div class="career-block__advert">
-        <p class="career-block__intro">
+    <div class="career__content">
+        <p class="career__intro">
             CAREERS
         </p>
-        <h2 class="career-block__title">
+        <h2 class="career__title">
             Want to Work With Us?
         </h2>
-        <p class="career-block__info">
+        <p class="career__info">
             If you are interested in joining our team and make a prospective career with lots of work and life benefits, you're in the right place. We are looking for young and talented enthusiasts.
         </p>
-        <a class="career-block__button" href="#">See Job Openings</a>
+        <a class="career__button" href="#">See Job Openings</a>
     </div>
 </section>
