--- a/partials/about-us.partial.html
+++ b/partials/about-us.partial.html
@@ -5,8 +5,7 @@
     </h2>
     <div class="about-crazy-fm__description">
         <p class="about-crazy-fm__history">Founded in 1985, Crazy FM is the leading public radio station serving the local community and surrounding areas with a blend of music, various news, public affairs, and a range of programs.
-
-            Crazy FMs mission is to provide the audience with a distinctive radio experience and unique music choice. With our diverse list of music genres, we have something special to meet any taste.</p>
-        <a href="#" class="about-crazy-fm__button about-crazy-fm__button--more">More About Us</a>
+            Crazy FM's mission is to provide the audience with a distinctive radio experience and unique music choice. With our diverse list of music genres, we have something special to meet any taste.</p>
+        <a href="/more.about.us.html" class="about-crazy-fm__button about-crazy-fm__button--more">More About Us</a>
     </div>
 </section>
