--- a/partials/latest-news.partial.html
+++ b/partials/latest-news.partial.html
@@ -3,27 +3,21 @@
         Latest News
     </h2>
     <div class="latest-news__cards">
-        <ul class="latest-news__menu">
-            <li class="latest-news__menu--item">
-                <img  src="img/latest-news/girl-with-a-can.jpg" alt="Girl with a can">
-                <p>Music</p>
-                <a href="#" class="latest-news__menu--item latest-news__menu--link">Britney Spears Celebrates 20-Year Anniversary of '...Baby One More Time'</a>
-            </li>
-            <li class="latest-news__cards--item-card">
-                <img src="img/latest-news/leaves.jpg" alt="Leaves">
-                <p>Music</p>
-                <a href="#" class="latest-news__menu--item latest-news__menu--link">Christina Aguilera Features a Very Unlikely Celebrity on a Song</a>
-            </li>
-            <li class="latest-news__cards--item-card">
-                <img src="img/latest-news/men.jpg" alt="Men">
-                <p>Music</p>
-                <a href="#" class="latest-news__menu--item latest-news__menu--link">Supergroup The Good, The Bad & The Queen Announces First Album</a>
-            </li>
-        </ul>
-</div>
-<div class="latest-news__button">
-    <a href="#" class="latest-news__link latest-news__link--more-news">More news</a>
-    <img src="img/latest-news/yellow.jpg" alt="Yellow">
-    <p>Giveaway</p>
-</div>
+        <article class="latest-news__cards-item-card">
+            <img  src="img/latest-news/lines.jpg" alt="Lines" class="card__image">
+            <p class="card__category">MUSIC</p>
+            <h3 class="card__title">Britney Spears Celebrates 20-Year Anniversary of '...Baby One More Time'</h3>
+        </article>
+        <article class="latest-news__cards-item-card">
+            <img  src="img/latest-news/girl-with-a-can.jpg" alt="Girl with a can" class="card__image">
+            <p class="card__category">MUSIC</p>
+            <h3 class="card__title">Christina Aguilera Features a Very Unlikely Celebrity on a Song</h3>
+        </article>
+        <article class="latest-news__cards-item-card">
+            <img src="img/latest-news/leaves.jpg" alt="Leaves" class="card__image">
+            <p class="card__category">MUSIC</p>
+            <h3 class="card__title">A Group The Chainsmokers Announces the Next Album</h3>
+        </article>
+    </div>
+    <a href="#" class="latest-news__link button">More news</a>
 </section>
