--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,5 @@
 @import url(careers.css);
 @import url(win.css);
 @import url(fm-faces.css);
+@import url(why-choose-us.css);
+@import url(shows.css);
