Aadded partial footer file

--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -4,8 +4,8 @@
             <span>102.7 FM</span>
         </div>
         <div class="header__social-icons">
-            <ul class="header __social-list">
-                <li class="header __social-item">
+            <ul class="header__social-list">
+                <li class="header__social-item">
                     <a href="#" class="header__social-link">
                         <svg width="25"
                             class="si617835a55d59c7002385aa18fb1344eb8cf2474d8cf5ce799a20d2e31635269413072 svgIcon_1J7 filled_Qbi darkTheme_3jZ"
@@ -22,7 +22,7 @@
                         </svg>
                     </a>
                 </li>
-                <li class="header __social-item">
+                <li class="header__social-item">
                     <a href="#" class="header__social-link">
                         <svg width="25"
                             class="si617835a55d59c7002385aa18fb1344eb8cf2474d8cf5ce799a20d2e31635269413072 svgIcon_1J7 filled_Qbi darkTheme_3jZ"
@@ -39,7 +39,7 @@
                         </svg>
                     </a>
                 </li>
-                <li class="header __social-item">
+                <li class="header__social-item">
                     <a href="#" class="header__social-link">
                         <svg width="25"
                             class="si617835a55d59c7002385aa18fb1344eb8cf2474d8cf5ce799a20d2e31635269413072 svgIcon_1J7 filled_Qbi darkTheme_3jZ"
@@ -67,7 +67,7 @@
                         </svg>
                     </a>
                 </li>
-                <li class="header __social-item">
+                <li class="header__social-item">
                     <a href="#" class="header__social-link">
                         <svg width="25"
                             class="si617835a55d59c7002385aa18fb1344eb8cf2474d8cf5ce799a20d2e31635269413072 svgIcon_1J7 filled_Qbi darkTheme_3jZ"
@@ -90,7 +90,7 @@
     <div class="header__menu">
         <div class="header__logo">
             <a href="#" class="header__logo-link">
-                <img style="background-color: #000000"
+                <img width="180" style="background-color: #000000"
                     src="https://res2.weblium.site/res/5c94ea26a5effb00255a843a/5c987bdaa70bb800248d418d_optimized.webp"
                     alt="Logo">
             </a>
