--- a/css/fm-faces.css
+++ b/css/fm-faces.css
@@ -1,33 +1,40 @@
-.cards {
-  max-width: 1280px;
-  width: 100%;
-  padding: 0 15px;
+.container {
 }
 .cards-title {
   text-align: center;
 }
 .cards-items {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #fff;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  color: var(--ui-light-shade-color);
   padding: 35px 15px;
   gap: 24px;
 }
 .cards-item {
-  width: 400px;
-  height: 400px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  align-items: stret;
   margin: 0 15px;
-  background: rgb(30, 169, 241);
+  padding: 30px;
+  /* background: var(--background-color); */
+  background:rgb(30, 169, 241);
 }
 .cards-item__img {
-  object-fit: fill;
-  width: 130px;
-  height: 130px;
+  object-fit: cover;
+  object-position: top;
   margin: 30px auto;
   border-radius: 50%;
+  width: 130px;
+  height: 130px;
+}
+
+@media (max-width: 1200px) {
+  .cards-items {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 768px) {
+  .cards-items {
+    grid-template-columns: 1fr;
+  }
 }
