--- a/partials/fm-faces.partial.html
+++ b/partials/fm-faces.partial.html
@@ -1,44 +1,44 @@
-<section class="cards">
-  <h1 class="cards-title">Crazy FM Faces</h1>
-  <div class="cards-items">
-    <div class="cards-item">
-      <img
-        class="cards-item__img"
-        src="/img/fm-faces/robert-wilson-avatar.webp"
-        alt="Robert Wilson Avatar"
-      />
-
-      <h3 class="cards-item__title">Robert Wilson</h3>
-      <p class="cards-item__text">
-        Robert Wilson has been working at Crazy FM as a sound producer for more
-        than 10 years. He is passionate about producing products of the highest
-        quality possible.
-      </p>
-    </div>
-    <div class="cards-item">
-      <img
-        class="cards-item__img"
-        src="/img/fm-faces/michael-robertson-avatar.webp"
-        alt="Michael Robertson Avatar"
-      />
-      <h3 class="cards-item__title">Michael Robertson</h3>
-      <p class="cards-item__text">
-        Michael Robertson is a highly trained and devoted Radio Producer and
-        Sound Designer with almost 15 years of expertise TV, radio, and music.
-      </p>
-    </div>
-    <div class="cards-item">
-      <img
-        class="cards-item__img"
-        src="/img/fm-faces/jessica-stone-avatar.webp"
-        alt="Jessica Stone Avatar"
-      />
-
-      <h3 class="cards-item__title">Jessica Stone</h3>
-      <p class="cards-item__text">
-        Jessica is the only woman and the soul of our team. She is responsible
-        for keeping all the processes run smoothly.
-      </p>
+<section class="cards-faces">
+  <div class="container">
+    <h2 class="cards-title">Crazy FM Faces</h2>
+    <div class="cards-items">
+      <div class="cards-item">
+        <img
+          class="cards-item__img"
+          src="img/fm-faces/robert-wilson-avatar.webp"
+          alt="Robert Wilson Avatar"
+        />
+        <h3 class="cards-item__title">Robert Wilson</h3>
+        <p class="cards-item__text">
+          Robert Wilson has been working at Crazy FM as a sound producer for
+          more than 10 years. He is passionate about producing products of the
+          highest quality possible.
+        </p>
+      </div>
+      <div class="cards-item">
+        <img
+          class="cards-item__img"
+          src="img/fm-faces/michael-robertson-avatar.webp"
+          alt="Michael Robertson Avatar"
+        />
+        <h3 class="cards-item__title">Michael Robertson</h3>
+        <p class="cards-item__text">
+          Michael Robertson is a highly trained and devoted Radio Producer and
+          Sound Designer with almost 15 years of expertise TV, radio, and music.
+        </p>
+      </div>
+      <div class="cards-item">
+        <img
+          class="cards-item__img"
+          src="img/fm-faces/jessica-stone-avatar.webp"
+          alt="Jessica Stone Avatar"
+        />
+        <h3 class="cards-item__title">Jessica Stone</h3>
+        <p class="cards-item__text">
+          Jessica is the only woman and the soul of our team. She is responsible
+          for keeping all the processes run smoothly.
+        </p>
+      </div>
     </div>
   </div>
 </section>
