--- a/partials/why-choose-us.partial.html
+++ b/partials/why-choose-us.partial.html
@@ -24,6 +24,8 @@
             <p class="card__text">The Funky Boombox is on air from 10pm to 12am every Friday.</p>
         </article>
     </div>
+    <div class="button-container">
     <a href="#" class="why-choose-us__link button">See All Programs</a>
+    </div>
 
 </section>
