--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 @import url(careers.css);
 @import url(win.css);
 @import url(fm-faces.css);
-@import url(schedule.css)
+@import url(schedule.css);
 @import url(why-choose-us.css);
 @import url(shows.css);
 @import url(header.css);
