add content css careers and win blocks

--- a/partials/careers.partial.html
+++ b/partials/careers.partial.html
@@ -1,7 +1,5 @@
 <section class="career">
-    <div class="career__logo">
-        <img src="img/careers/pattern-career.webp" alt="Pattern background">
-    </div>
+    <div class="career__logo"></div>
     <div class="career__content">
         <p class="career__intro">
             CAREERS
