--- a/partials/win.partial.html
+++ b/partials/win.partial.html
@@ -1,7 +1,5 @@
 <section class="prize">
-    <div class="prize__logo">
-        <img src="img/win/pattern.webp" alt="Pattern background">
-    </div>
+    <div class="prize__logo"></div>
     <div class="prize__advert">
         <h2 class="prize__title">
             Win $15,000 Worth of Equipment with McDonald's Community Football
