--- a/css/header.css
+++ b/css/header.css
@@ -2,4 +2,6 @@
     width: 25px;
     height: 25px;
     border-radius: 50%;
+    fill: var(--ui-light-shade-color);
+    border: 1px solid var(--ui-dark-shade-color);
 }
