Added css header partial

--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -1,4 +1,44 @@
 <header class="header">
+    <div class="header__menu">
+        <div class="header__logo">
+            <a href="#" class="header__logo-link">
+                <img class="header__logo-img" 
+                    src="https://res2.weblium.site/res/5c94ea26a5effb00255a843a/5c987bdaa70bb800248d418d_optimized.webp"
+                    alt="Logo">
+            </a>
+        </div>
+        <div class="header__nav">
+            <div class="header__nav-burger">
+                <buton class="header__nav-btn">
+                    <span class="header__nav-line"></span>
+                    <span class="header__nav-line"></span>
+                    <span class="header__nav-line"></span>
+                </buton>
+            </div>
+            <nav class="header__nav-menu">
+                <ul class="header__nav-list">
+                    <li class="header__nav-item">
+                        <a class="header__nav-link" href="#">Shows</a>
+                    </li>
+                    <li class="header__nav-item">
+                        <a class="header__nav-link" href="#">Schedule</a>
+                    </li>
+                    <li class="header__nav-item">
+                        <a class="header__nav-link" href="#">Podcasts</a>
+                    </li>
+                    <li class="header__nav-item">
+                        <a class="header__nav-link" href="#">News</a>
+                    </li>
+                    <li class="header__nav-item">
+                        <a class="header__nav-link" href="#">About Crazy FM</a>
+                    </li>
+                    <li class="header__nav-item">
+                        <a class="header__nav-link" href="#">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
     <div class="header__content">
         <div class="header__frequency">
             <span>102.7 FM</span>
@@ -34,39 +74,6 @@
                     </a>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="header__menu">
-        <div class="header__logo">
-            <a href="#" class="header__logo-link">
-                <img width="180" style="background-color: #000000"
-                    src="https://res2.weblium.site/res/5c94ea26a5effb00255a843a/5c987bdaa70bb800248d418d_optimized.webp"
-                    alt="Logo">
-            </a>
-        </div>
-        <div class="header__nav">
-            <nav class="header__nav-menu">
-                <ul class="header__nav-list">
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="#">Shows</a>
-                    </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="#">Schedule</a>
-                    </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="#">Podcasts</a>
-                    </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="#">News</a>
-                    </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="#">About Crazy FM</a>
-                    </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="#">Contacts</a>
-                    </li>
-                </ul>
-            </nav>
         </div>
     </div>
 </header>
