--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,59 @@
+.header {
+    background-color: var(--ui-dark-shade-color);
+    padding: 20px;
+}
+
+.header__menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.header__logo-img {
+    width: 180px;
+}
+
+.header__nav-btn {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+}
+
+.header__nav-line {
+
+    width: 24px;
+    min-height: 2px;
+    background-color: var(--ui-light-shade-color);
+}
+
+.header__nav-menu,
+.header__content {
+    display: none;
+}
+
 .header__social-icon {
     width: 25px;
     height: 25px;
     border-radius: 50%;
     fill: var(--ui-light-shade-color);
     border: 1px solid var(--ui-dark-shade-color);
+}
+
+@media (min-width: 992px) {
+    .header__nav-burger {
+        display: none;
+    }
+    .header__nav-menu,
+    .header__content {
+        display: flex;
+    }
+
+}
+
+.header__frequency {
+    color: var(--ui-light-shade-color);
+    font-size: 16px;
 }
