Added container class

--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="header__menu">
+    <div class="header__menu container">
         <div class="header__logo">
             <a href="#" class="header__logo-link">
                 <img class="header__logo-img" 
@@ -39,7 +39,7 @@
             </nav>
         </div>
     </div>
-    <div class="header__content">
+    <div class="header__content container">
         <div class="header__frequency">
             <span>102.7 FM</span>
         </div>
