--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 .header {
     background-color: var(--ui-dark-shade-color);
-    padding: 20px;
+    padding: 10px 40px;
 }
 
 .header__menu {
@@ -46,8 +46,17 @@
     .header__nav-burger {
         display: none;
     }
-    .header__nav-menu,
+
     .header__content {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .header__menu {
+        margin-top: 20px;
+    }
+
+    .header__nav-menu {
         display: flex;
     }
 
@@ -55,5 +64,39 @@
 
 .header__frequency {
     color: var(--ui-light-shade-color);
+    font-weight: 500;
     font-size: 16px;
+}
+
+.header__social-list {
+    display: flex;
+    padding: 0 12px;
+    gap: 12px;
+}
+
+.header__nav-link {
+    font-weight: 500;
+    font-size: 16px;
+    text-decoration: none;
+    color: var(--ui-light-shade-color)
+}
+
+.header__nav-menu {
+    width: 550px;
+    padding-right: 40px;
+    margin-right: 30px;
+}
+
+.header__nav-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+@media (min-width: 1066px) {
+    .header__nav-menu {
+        padding-right: 0;
+        margin-right: 0;
+    }
 }
