--- a/css/global.css
+++ b/css/global.css
@@ -7,9 +7,11 @@
 }
 
 :root {
+    --brend-color: #1faff9;
     --ui-dark-accent-color: #838383;
     --ui-dark-shade-color: #000;
     --ui-light-shade-color: #fff;
+    --first-hover-color: #13bde3;
     font-family: 'Montserrat', sans-serif;
     scroll-behavior: smooth;
 }
