Added css in partial follow us

--- a/css/global.css
+++ b/css/global.css
@@ -8,6 +8,7 @@
 
 :root {
     --brend-color: #1faff9;
+    --brend-color-gradient: #2fddf5;
     --ui-dark-accent-color: #838383;
     --ui-dark-shade-color: #000;
     --ui-light-shade-color: #fff;
