--- a/partials/latest-news.partial.html
+++ b/partials/latest-news.partial.html
@@ -2,22 +2,28 @@
     <h2 class="latest-news__title">
         Latest News
     </h2>
-    <div class="latest-news__cards">
-        <article class="latest-news__cards-item-card">
-            <img  src="img/latest-news/lines.jpg" alt="Lines" class="card__image">
-            <p class="card__category">MUSIC</p>
-            <h3 class="card__title">Britney Spears Celebrates 20-Year Anniversary of '...Baby One More Time'</h3>
-        </article>
-        <article class="latest-news__cards-item-card">
-            <img  src="img/latest-news/girl-with-a-can.jpg" alt="Girl with a can" class="card__image">
-            <p class="card__category">MUSIC</p>
-            <h3 class="card__title">Christina Aguilera Features a Very Unlikely Celebrity on a Song</h3>
-        </article>
-        <article class="latest-news__cards-item-card">
-            <img src="img/latest-news/leaves.jpg" alt="Leaves" class="card__image">
-            <p class="card__category">MUSIC</p>
-            <h3 class="card__title">A Group The Chainsmokers Announces the Next Album</h3>
-        </article>
+    <div class="latest-news__container">
+        <div class="latest-news__container-item picture">
+            <img  src="img/latest-news/lines.jpg" alt="Lines" class="picture__image">
+            <div class="picture__details">
+                <p class="picture__category">Music</p>
+            <h3 class="picture__title">Britney Spears Celebrates 20-Year Anniversary of '...Baby One More Time'</h3>
+            </div>
+        </div>
+        <div class="latest-news__container-item picture">
+            <img  src="img/latest-news/girl-with-a-can.jpg" alt="Girl with a can" class="picture__image">
+            <div class="picture__details">
+                <p class="picture__category">Music</p>
+            <h3 class="picture__title">Christina Aguilera Features a Very Unlikely Celebrity on a Song</h3>
+            </div>
+        </div>
+        <div class="latest-news__container-item picture">
+            <img src="img/latest-news/leaves.jpg" alt="Leaves" class="picture__image">
+            <div class="picture__details">
+                <p class="picture__category">Music</p>
+            <h3 class="picture__title">A Group The Chainsmokers Announces the Next Album</h3>
+            </div>
+        </div>
     </div>
     <a href="#" class="latest-news__link button">More news</a>
 </section>
