--- a/partials/footer.partial.html
+++ b/partials/footer.partial.html
@@ -1,9 +1,9 @@
 <footer class="footer">
-    <div class="footer__menu">
+    <div class="footer__menu container">
         <div class="footer__logo">
             <a href="#" class="footer__logo-link">
-                <img width="180" style="background-color: #000000"
-                    src="https://res2.weblium.site/res/5c94ea26a5effb00255a843a/5c987bdaa70bb800248d418d_optimized.webp"
+                <img class="footer__logo-img"
+                    src="https://res2.weblium.site/res/5c94ea26a5effb00255a843a/5c98a953a70bb800248d948f_optimized.webp"
                     alt="Logo" class="footer__logo-image">
             </a>
         </div>
