Added link to partial of footer

--- a/partials/footer.partial.html
+++ b/partials/footer.partial.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="footer__menu container">
         <div class="footer__logo">
-            <a href="#" class="footer__logo-link">
+            <a href="/" class="footer__logo-link">
                 <img class="footer__logo-img"
                     src="https://res2.weblium.site/res/5c94ea26a5effb00255a843a/5c98a953a70bb800248d948f_optimized.webp"
                     alt="Logo" class="footer__logo-image">
