--- a/css/careers.css
+++ b/css/careers.css
@@ -1,6 +1,7 @@
 .career {
     position: relative;
-    height: 500px;
+    height: 650px;
+    padding: 100px 0;
 }
 .career__logo {
     position: absolute;
@@ -8,38 +9,40 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background: url("/img/careers/pattern-career.webp") 44.38% 100% / cover no-repeat fixed, rgb(0, 0, 0)
+    background: url("/img/careers/pattern-career.webp") 44.38% 100% / cover no-repeat fixed, rgb(0, 0, 0);
+    z-index: -1;
 }
 .career__content {
+    margin: 0 60px;
     background: white;
     position: absolute;
-    max-width: 600px;
-    padding: 50px;
+    width: 600px;
+    height: 300px;
+    padding: 40px 40px;
 }
 .career__intro {
-    font-size: 24px;
-    font-weight: bold;
+    font: 14px 'Montserrat', sans-serif;
     color: #838383;
 }
 .career__title {
-    font-size: 36px;
+    font: 38px 'Montserrat', sans-serif;
     color: black;
     margin: 10px 0;
 }
 .career__info {
-    font-size: 18px;
+    font: 16px 'Montserrat', sans-serif;
     color: #838383;
     margin-bottom: 20px;
 }
 .career__button {
-    display: inline-block;
     padding: 10px 20px;
     background-color: #1faff9;
     color: #fff;
+    font: 14px 'Montserrat', sans-serif;
     text-decoration: none;
-    border-width: 1px;
     border-radius: 28px;
     transition: background-color 0.5s ease;
+    display: inline-block;
 }
 .career__button:hover {
     background-color: #2fddf5;
