--- a/css/win.css
+++ b/css/win.css
@@ -1,45 +1,40 @@
 .prize {
+    background: url(/img/win/pattern.webp) no-repeat center #000000;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    padding: 90px 0 100px;
 }
 .prize__logo {
-    position: absolute;
-    background: url(/img/win/pattern.webp) no-repeat center #000000;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    opacity: 0.1;
-    z-index: -1;
+   display: inline-block;
 }
 .prize__advert{
-    height: 600px;
+   margin: 0 22.5px;
+   padding: 0 40px;
 }
 .prize__title {
-    font-size: 24px;
+    font: 38px 'Montserrat', sans-serif;
     margin-bottom: 10px;
     color: white;
 }
 .prize__info {
-    font-size: 16px;
+    font: 16px 'Montserrat', sans-serif;
     line-height: 1.6;
     color: #838383;
     margin-bottom: 10px;
 }
 .prize__button {
-    border: none;
-    margin-top: 20px;
+    font: 12px 'Montserrat', sans-serif;
     padding: 12px 24px;
-    background-color: black;
+    margin: -5px;
     color: white;
     text-decoration: none;
     border-radius: 28px;
-    font-weight: bold;
-    transition: background-color 0.3s, color 0.3s;
     display: inline-block;
     cursor: pointer;
-    outline: none;
+    border: 1px solid white;
+    transition: background-color 0.3s, color 0.3s;
 }
 .prize__button:hover {
     background-color: white;
