add css code why-choose-us

--- a/partials/why-choose-us.partial.html
+++ b/partials/why-choose-us.partial.html
@@ -1,8 +1,8 @@
 <section class="whu-choose-us">
-    <h2 class="whu-choose-us__title">
+    <h2 class="whu-choose-us__title container">
         Why Choose Us
     </h2>
-    <div class="whu-choose-us__cards">
+    <div class="whu-choose-us__cards container">
         <article class="whu-choose-us__carts-item card">
             <img src="img/why-choose-us/cassette.jpg" alt="Cassette" class="card__image">
             <h3 class="card__title">InDigitNess Voice</h3>
@@ -24,8 +24,8 @@
             <p class="card__text">The Funky Boombox is on air from 10pm to 12am every Friday.</p>
         </article>
     </div>
-    <div class="button-container">
-    <a href="#" class="why-choose-us__link button">See All Programs</a>
+    <div class="whu-choose-us-button-container">
+    <a href="#" class="why-choose-us__link">See All Programs</a>
     </div>
 
 </section>
