--- a/partials/shows.partial.html
+++ b/partials/shows.partial.html
@@ -3,35 +3,35 @@
         Shows
     </h2>
     <div class="shows__cards">
-        <article class="shows__carts-item card">
-            <img src="img/shows/cassette.jpg" alt="Cassette" class="card__image">
-            <h3 class="card__title">InDigitNess Voice</h3>
-            <p class="card__text">The program goal is to entertain, inform, educate, & involve ...</p>
+        <article class="shows__carts-item shows-card">
+            <img src="img/shows/cassette.jpg" alt="Cassette" class="shows__card-image">
+            <h3 class="shows__card-title">InDigitNess Voice</h3>
+            <p class="shows__card-text">The program goal is to entertain, inform, educate, & involve ...</p>
         </article>
-        <article class="shows__carts-item card">
-            <img src="img/shows/man-headphones.jpg" alt="A man in white headphones" class="card__image">
-            <h3 class="card__title">Afropop Worldwide</h3>
-            <p class="card__text">Afropop Worldwide is a first-rate radio program devoted to ...</p>
+        <article class="shows__carts-item shows-card">
+            <img src="img/shows/man-headphones.jpg" alt="A man in white headphones" class="shows__card-image">
+            <h3 class="shows__card-title">Afropop Worldwide</h3>
+            <p class="shows__card-text">Afropop Worldwide is a first-rate radio program devoted to ...</p>
         </article>
-        <article class="shows__carts-item card">
-            <img src="img/shows/volume-controller.jpg" alt="Volume controller" class="card__image">
-            <h3 class="card__title">Bella's SoulFRESH</h3>
-            <p class="card__text">DJ Bella draws in the audience with new format music ...</p>
+        <article class="shows__carts-item shows-card">
+            <img src="img/shows/volume-controller.jpg" alt="Volume controller" class="shows__card-image">
+            <h3 class="shows__card-title">Bella's SoulFRESH</h3>
+            <p class="shows__card-text">DJ Bella draws in the audience with new format music ...</p>
         </article>
-        <article class="shows__carts-item card">
-            <img src="img/shows/chameleon.jpg" alt="Chameleon" class="card__image">
-            <h3 class="card__title">Funky Boombox</h3>
-            <p class="card__text">The Funky Boombox is on air from 10pm to 12am every Friday.</p>
+        <article class="shows__carts-item shows-card">
+            <img src="img/shows/chameleon.jpg" alt="Chameleon" class="shows__card-image">
+            <h3 class="shows__card-title">Funky Boombox</h3>
+            <p class="shows__card-text">The Funky Boombox is on air from 10pm to 12am every Friday.</p>
         </article>
-        <article class="shows__carts-item card">
-            <img src="img/shows/two-guys.jpg" alt="Two guys" class="card__image">
-            <h3 class="card__title">Jack & Joe</h3>
-            <p class="card__text">Fun and smart talks on the Crazy FM.</p>
+        <article class="shows__carts-item shows-card">
+            <img src="img/shows/two-guys.jpg" alt="Two guys" class="shows__card-image">
+            <h3 class="shows__card-title">Jack & Joe</h3>
+            <p class="shows__card-text">Fun and smart talks on the Crazy FM.</p>
         </article>
-        <article class="shows__carts-item card">
-            <img src="img/shows/girl-with-glasses.jpg" alt="Girl with glasses" class="card__image">
-            <h3 class="card__title">Crazy FM Kiss Show</h3>
-            <p class="card__text">Every day greatest love song hits for our listeners.</p>
+        <article class="shows__carts-item shows-card">
+            <img src="img/shows/girl-with-glasses.jpg" alt="Girl with glasses" class="shows__card-image">
+            <h3 class="shows__card-title">Crazy FM Kiss Show</h3>
+            <p class="shows__card-text">Every day greatest love song hits for our listeners.</p>
         </article>
     </div>
 
