featured-podcasts.css

--- a/partials/featured-podcasts.html
+++ b/partials/featured-podcasts.html
@@ -23,5 +23,5 @@
             <button class="card-button" type="button">Listen now</button>
         </article>
     </div>
-    <a href="#">All Podcasts</a>
+    <a href="#" class="button">All Podcasts</a>
 </section>
