redact index.html

--- a/partials/careers.partial.html
+++ b/partials/careers.partial.html
@@ -5,7 +5,7 @@
             CAREERS
         </p>
         <h2 class="career__title container">
-            Want to Work With Us?
+            <b>Want to Work With Us?</b>
         </h2>
         <p class="career__info container">
             If you are interested in joining our team and make a prospective career with lots of work and life benefits, you're in the right place. We are looking for young and talented enthusiasts.
