--- a/partials/win.partial.html
+++ b/partials/win.partial.html
@@ -2,7 +2,7 @@
     <div class="prize__logo"></div>
     <div class="prize__advert">
         <h2 class="prize__title">
-            Win $15,000 Worth of Equipment with McDonald's Community Football
+            <b>Win $15,000 Worth of Equipment with McDonald's Community Football</b>
         </h2>
         <p class="prize__info">
             McDonald's (proud sponsors of the Frank Skinner Show on Crazy FM) are celebrating 15 years of supporting Grassroots Football across the UK. This summer, McDonald’s is providing fun free family Community Football Days with more grassroots football clubs than ever before!
