created latest news partial

--- a/partials/latest-news.partial.html
+++ b/partials/latest-news.partial.html
@@ -4,28 +4,32 @@
         Latest News
     </h2>
     <div class="latest-news__menu">
-        <div class="latest-news__menu-item picture">
-            <img  src="img/latest-news/lines.jpg" alt="Lines" class="picture__image">
-            <div class="picture__details">
-                <p class="picture__category">Music</p>
-            <h3 class="picture__title">Britney Spears Celebrates 20-Year Anniversary of '...Baby One More Time'</h3>
-            </div>
-        </div>
-        <div class="latest-news__menu-item picture">
-            <img  src="img/latest-news/girl-with-a-can.jpg" alt="Girl with a can" class="picture__image">
-            <div class="picture__details">
-                <p class="picture__category">Music</p>
-            <h3 class="picture__title">Christina Aguilera Features a Very Unlikely Celebrity on a Song</h3>
-            </div>
-        </div>
-        <div class="latest-news__menu-item picture">
-            <img src="img/latest-news/leaves.jpg" alt="Leaves" class="picture__image">
-            <div class="picture__details">
-                <p class="picture__category">Music</p>
-            <h3 class="picture__title">A Group The Chainsmokers Announces the Next Album</h3>
+        <div class="latest-news__menu-item overlay">
+            <img  src="img/latest-news/lines.jpg" alt="Lines" class="overlay__image">
+            <div class="overlay__details">
+                <p class="overlay__category">Music</p>
+            <h3 class="overlay__title">Britney Spears Celebrates 20-Year Anniversary of '...Baby One More Time'</h3>
             </div>
         </div>
     </div>
+        <div class="latest-news__container">
+            <div class="latest-news__container-item overlad">
+            <img  src="img/latest-news/girl-with-a-can.jpg" alt="Girl with a can" class="overlad__image">
+            <div class="overlad__details">
+                <p class="overlad__category">Music</p>
+            <h3 class="overlad__title">Christina Aguilera Features a Very Unlikely Celebrity on a Song</h3>
+            </div>
+            </div>
+        </div>
+        <div class="latest-news__system">
+            <div class="latest-news__system-item over">
+            <img src="img/latest-news/leaves.jpg" alt="Leaves" class="over__image">
+            <div class="over__details">
+                <p class="over__category">Music</p>
+            <h3 class="over__title">A Group The Chainsmokers Announces the Next Album</h3>
+            </div>
+        </div>
+        </div>
     </div>
     <a href="#" class="latest-news__link button">More news</a>
 </section>
