--- a/partials/featured-podcasts.html
+++ b/partials/featured-podcasts.html
@@ -1,7 +1,7 @@
-<section class="featuret-podcasts">
+<section class="featured-podcasts">
     <h2 class="featured-podcasts__title">Featured Podcasts</h2>
     <p class="featured-podcasts__description">Download and listen to your favorite shows from Crazy FM for free</p>
-    <div class="featured-postcads__cards">
+    <div class="featured-podcasts__cards">
         <article class="featured-podcasts__cards-item card">
             <img width="362" src="img/featured-podcasts/lips.jpeg" alt="lips" class="featured-podcasts__card-image">
             <h3 class="card__title">The Dave Berry Breakfast Show</h3>
@@ -23,5 +23,5 @@
             <button class="card-button" type="button">Listen now</button>
         </article>
     </div>
-    <a href="#" class="button">All Podcasts</a>
+    <a href="#" class="featured-podcasts__button">All Podcasts</a>
 </section>
